# solana-doc

./: README.md
codama-client/: codama.json  note  package.json  pnpm-lock.yaml
codama-client/example/: idl.json
counter-program/: Cargo.toml  note
counter-program/examples/: client.rs
counter-program/src/: lib.rs
cpi/: Anchor.toml  note  package.json
cpi-with-pda-anchor/: Anchor.toml  note  package.json
cpi-with-pda-anchor/tests/: test_anchor.ts
cpi-with-pda-rust/: Cargo.toml  note  package.json
cpi-with-pda-rust/src/: lib.rs
cpi-with-pda-rust/tests/: svm.test.ts
cpi-without-pda-anchor/: Anchor.toml  note
cpi-without-pda-anchor/tests/: test_anchor.ts
cpi-without-pda-rust/: Cargo.toml  note  package.json  tsconfig.json
cpi-without-pda-rust/src/: lib.rs
cpi-without-pda-rust/svm/: transaction.ts
cpi-without-pda-rust/tests/: svm.test.ts
cpi/tests/: cpi_test.ts
hello-anchor/: Anchor.toml  note
hello-anchor/tests/: hello_anchor_test.ts
hello-world/: Cargo.toml  note
hello-world/examples/: client.rs
hello-world/src/: lib.rs
pda/: Anchor.toml  note
pda-account/: Anchor.toml  note
pda-account/tests/: pda_account_test.ts
pda/tests/: pda_test.ts
ts-client/: fetch_mint_account.ts  note  package.json
ts-client/accounts/: keypair.ts  note  pda.ts  sol_account.ts  sysvar_clock.ts  token_2022_account.ts  token_program.ts
ts-client/fees/: note  set_fee.ts
ts-client/instructions/: note  transfer_sol.ts
ts-client/pda/: address_seed.ts  loop_bump_seed.ts  note  string_and_address_seed.ts  string_seed.ts
ts-client/tokens/: note  (+55 more)
(+51 files in other folders)
